Here's my contribution with stylesheet included

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>HospitalRun</title>
+    <style>
+      .div{
+        width: 50vw;
+        height: 90vh;
+        margin: auto;
+        background-image: url(logo.png);
+        background-repeat: no-repeat;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="div">
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
