My contribution with stylesheet included

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>HospitalRun</title>
     <style>
-      .div{
+      .div/*Using this because background image isn't scaling to the center properly on my end*/ {
         width: 50vw;
         height: 90vh;
         margin: auto;
